--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -49,6 +49,7 @@ a {
 
 .no-scroll {
     overflow: hidden;
+    position: fixed;
 }
 
 #main {
@@ -57,6 +58,11 @@ a {
     animation-duration: 0.5s;
     animation-fill-mode: forwards;
     opacity: 0;
+    padding-top: 7rem;
+
+    @include desktop {
+        padding-top: 12rem;
+    }
 }
 
 #maincontent {
