Remove throttle() from scroll event

--- a/src/app/components/shell/header/header.hbs
+++ b/src/app/components/shell/header/header.hbs
@@ -58,8 +58,7 @@
                         Our Impact <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu" role="menu" aria-expanded="false" aria-label="Our Impact menu">
-                        <!-- <li><a href="/stories" role="menuitem" tabindex="-1">Success Stories</a></li>
-                        <li><a href="/team" role="menuitem" tabindex="-1">Our Team</a></li> -->
+                        <li><a href="/impact" role="menuitem" tabindex="-1">Explore Our Impact</a></li>
                         <li><a href="/allies" role="menuitem" tabindex="-1">Allies</a></li>
                         <li><a href="/foundation-support" role="menuitem" tabindex="-1">Foundation Support</a></li>
                     </ul>
