--- a/src/app/components/shell/header/header.hbs
+++ b/src/app/components/shell/header/header.hbs
@@ -7,7 +7,6 @@
     <nav class="meta-nav">
         <div class="container">
             <ul class="nav-menu meta-menu" role="menu" aria-label="Meta navigation menu">
-                <li class="nav-menu-item"><a href="/news" role="menuitem">News</a></li>
                 <li class="nav-menu-item"><a href="/contact" role="menuitem">Contact</a></li>
                 <li class="nav-menu-item"><a href="/give" role="menuitem">Give</a></li>
                 <li class="nav-menu-item"><a href="/login" role="menuitem">Login</a></li>
@@ -35,9 +34,7 @@
 
             <ul class="nav-menu main-menu">
                 <li class="nav-menu-item dropdown" role="presentation">
-                    <a href="/subjects" role="menuitem" aria-haspopup="true">
-                        Subjects <span class="caret"></span>
-                    </a>
+                    <a href="/subjects" role="menuitem" aria-haspopup="true">Subjects</a>
                     <ul class="dropdown-menu" role="menu" aria-expanded="false" aria-label="Subjects menu">
                         <li role="presentation"><a href="/subjects" role="menuitem" tabindex="-1">All</a></li>
                         <li role="presentation"><a href="/subjects/math" role="menuitem" tabindex="-1">Math</a></li>
@@ -54,9 +51,7 @@
                     <a href="/k-12" role="menuitem">K-12</a>
                 </li>
                 <li class="nav-menu-item dropdown" role="presentation">
-                    <a href="/impact" role="menuitem" aria-haspopup="true">
-                        Our Impact <span class="caret"></span>
-                    </a>
+                    <a href="/impact" role="menuitem" aria-haspopup="true">Our Impact</a>
                     <ul class="dropdown-menu" role="menu" aria-expanded="false" aria-label="Our Impact menu">
                         <li><a href="/impact" role="menuitem" tabindex="-1">Explore Our Impact</a></li>
                         <li><a href="/allies" role="menuitem" tabindex="-1">Allies</a></li>
