--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -110,3 +110,4 @@ a {
 @import 'components/responsive';
 @import 'components/social';
 @import 'components/strips';
+@import 'components/tag-multi-select';
