Add k-12 page with basic styling

--- a/src/app/components/buckets/buckets.scss
+++ b/src/app/components/buckets/buckets.scss
@@ -2,7 +2,7 @@
 @import 'mixins';
 
 .buckets-section {
-    padding: 3.8vw;
+    padding: 3.8vw 0;
     margin: 0 auto;
     max-width: $boxed-width;
 
