Keep a global model of Salesforce form data
Adoption, Interest, and Comp Copy forms now save the values of text
fields, and pre-fill them from the saved values on load.

Adoption confirmation includes link back to adoption so they can fill
it out for another book.

--- a/src/app/pages/adoption-confirmation/adoption-confirmation.hbs
+++ b/src/app/pages/adoption-confirmation/adoption-confirmation.hbs
@@ -7,6 +7,10 @@
     are joining thousands of educators in providing greater access to quality
     learning resources for your students.
 </p>
+<h2>Have you adopted more books?</h2>
+<p>
+    Please <a href="/adoption">tell us about it</a>, too!
+</p>
 <div>
     <p>
         Use the calculator below to find out how much money you will save your
