--- a/src/app/pages/adoption/adoption.hbs
+++ b/src/app/pages/adoption/adoption.hbs
@@ -11,7 +11,7 @@
     </p>
     <p class="subhead">
         Not using OpenStax College yet? Please complete the OpenStax
-        <a href="/adoption_interests">interest form</a> so we may send you the
+        <a href="/interest">interest form</a> so we may send you the
         information you need.
     </p>
 </div>
