Fix clone function on mobile menu flyout
fix cloneDropdownParent() clone element
fix .caret back arrow function & add "back" text
double check mobile menu flyout transitions in all browsers
add login link and redirect

--- a/src/app/components/shell/header/header.hbs
+++ b/src/app/components/shell/header/header.hbs
@@ -9,7 +9,7 @@
             <ul class="nav-menu meta-menu" role="menu" aria-label="Meta navigation menu">
                 <li class="nav-menu-item"><a href="/contact" role="menuitem">Contact</a></li>
                 <li class="nav-menu-item"><a href="/give" role="menuitem">Give</a></li>
-                <li class="nav-menu-item"><a href="/login" role="menuitem">Login</a></li>
+                <li class="nav-menu-item login"><a href="https://oscms-dev.openstax.org/accounts/login/openstax/?next=" role="menuitem">Login</a></li>
             </ul>
             <span class="logo-wrapper">
                 <a class="logo rice-logo" href="http://www.rice.edu" role="menuitem">
