--- a/src/app/components/shell/header/header.scss
+++ b/src/app/components/shell/header/header.scss
@@ -13,7 +13,7 @@ $transition: 0.3s;
     display: flex;
     flex-flow: column nowrap;
     width: 100%;
-    height: 7rem;
+    height: 6rem;
     background-color: rgba(color(neutral-lightest), 0.99);
     justify-content: center;
     align-items: center;
@@ -27,7 +27,7 @@ $transition: 0.3s;
     }
 
     @include desktop {
-        height: 12rem;
+        height: 11rem;
         position: absolute;
         top: 0;
         left: 0;
@@ -121,7 +121,6 @@ $transition: 0.3s;
 
                 &::before,
                 &::after {
-                    opacity: 1;
                     border-right: 0.2rem solid;
                     content: '';
                     display: block;
@@ -133,28 +132,21 @@ $transition: 0.3s;
                     top: 50%;
                     width: 0;
 
-                    @at-root .open#{&} {
-                        opacity: 0;
-                    }
-
                     @include desktop {
                         height: 0.7rem;
                         right: -1rem;
+                        margin-top: -1.2rem;
+
                     }
                 }
 
                 &::after {
-                    opacity: 1;
                     margin-top: -0.1rem;
                     transform: rotate3d(0, 0, 1, 45deg);
 
                     @include desktop {
-                        margin-top: -0.7rem;
+                        margin-top: -1.2rem;
                         right: -1.4rem;
-                    }
-
-                    @at-root .open#{&} {
-                        opacity: 0;
                     }
                 }
             }
@@ -164,6 +156,8 @@ $transition: 0.3s;
                     width: auto;
                     height: auto;
                     z-index: 1;
+                    opacity: 1;
+                    transform: translate3d(-50%, 0, 0);
                 }
             }
 
@@ -227,13 +221,14 @@ $transition: 0.3s;
             @include desktop {
                 width: 0;
                 height: 0;
-                top: 3rem;
+                top: 3.7rem;
                 left: 50%;
-                transform: translate3d(-50%, 0, 0);
-                border-top: 0.4rem solid color(neutral-lighter);
+                transform: translate3d(-50%, -1rem, 0);
+                border-top: 0.5rem solid color(orange);
                 white-space: nowrap;
                 background: color(neutral-lightest);
-                text-align: left;
+                opacity: 0;
+                transition: transform 0.2s, opacity 0.2s;
 
 
                 @at-root .fixed#{&} {
@@ -252,7 +247,7 @@ $transition: 0.3s;
                 margin: 0 0 0.5rem;
 
                 @include desktop {
-                    margin: 1rem;
+                    margin: 0.5rem 1rem;
                 }
             }
 
@@ -260,7 +255,7 @@ $transition: 0.3s;
                 color: color(gray);
 
                 &:hover {
-                    color: color(blue);
+                    color: color(cyan);
                 }
             }
         }
@@ -285,6 +280,8 @@ $transition: 0.3s;
             overflow: inherit;
             background-color: lighten(color(neutral-lighter), 8%);
             font-size: 1.4rem;
+            z-index: 1;
+
         }
 
         .container {
@@ -316,7 +313,7 @@ $transition: 0.3s;
                 &:active,
                 &:focus,
                 &:hover {
-                    color: color(blue);
+                    color: color(cyan);
                 }
             }
         }
@@ -375,7 +372,7 @@ $transition: 0.3s;
         order: 1;
         height: 100%;
         width: 100%;
-        box-shadow: 0 0.8rem 0.3rem -0.6rem rgba(color(gray), 0.3);
+        box-shadow: 0 0.1rem 0.3rem 0.2rem rgba(color(gray), 0.1);
 
         @at-root .active#{&} {
             height: auto;
@@ -384,7 +381,7 @@ $transition: 0.3s;
 
         @include desktop {
             order: 2;
-            height: 7rem;
+            height: 6rem;
             transform: translate3d(0, 0, 0);
             transition: transform;
 
@@ -394,7 +391,7 @@ $transition: 0.3s;
 
             @at-root .fixed#{&} {
                 position: fixed;
-                top: -7rem;
+                top: -6rem;
                 left: 0;
                 width: 100%;
                 transform: translate3d(0, 0, 0);
@@ -411,7 +408,7 @@ $transition: 0.3s;
         .container {
             justify-content: center;
             align-items: center;
-            padding: 1.5rem;
+            padding: 0 1.5rem;
 
             @include desktop {
                 height: 100%;
@@ -442,7 +439,7 @@ $transition: 0.3s;
                     &:hover {
                         &::after {
                             background-color: color(green);
-                            bottom: -0.5rem;
+                            bottom: -1.7rem;
                             content: '';
                             height: 0.5rem;
                             left: 1rem;
@@ -457,7 +454,7 @@ $transition: 0.3s;
             > a {
                 @include desktop {
                     color: color(gray);
-                    padding-bottom: 1rem;
+                    padding-bottom: 2rem;
 
                     @at-root .transparent#{&} {
                         color: color(neutral-lightest);
@@ -473,7 +470,7 @@ $transition: 0.3s;
             display: flex;
             align-items: center;
             position: absolute;
-            top: 1.5rem;
+            top: 1.2rem;
             left: 1.5rem;
 
             @include desktop {
@@ -570,7 +567,7 @@ $transition: 0.3s;
         user-select: none;
         background: transparent;
         position: absolute;
-        top: 2.4rem;
+        top: 2rem;
         right: 1.5rem;
 
         @include desktop {
