--- a/src/app/pages/subjects/category-section/book/book.hbs
+++ b/src/app/pages/subjects/category-section/book/book.hbs
@@ -2,6 +2,6 @@
 <div class="tooltip">
     <div class="get-this-title-container"></div>
     <div class="cta">
-        <a class="btn">details and resources</a>
+        <a href="/details?{{slug}}" class="btn">details and resources</a>
     </div>
 </div>
