--- a/src/app/pages/k-12/k-12.hbs
+++ b/src/app/pages/k-12/k-12.hbs
@@ -22,18 +22,7 @@
             </div>
         </div>
 
-        <div class="tutor-banner">
-            <div class="tutor">
-                <div class="tutor-caption">
-                    <div class="image"></div>
-                    <div class="caption">
-                        <span class="title">OpenStax Tutor</span>
-                        <span class="blurb">Our customizable courseware uses cognitive science and machine learning to create a personalized learning experience that empowers students to succeed.</span>
-                        <a class="btn btn-orange" href="/allies">Learn more</a>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <div class="tutor-banner"></div>
 
         <div class="buckets"><div class="buckets-section"></div></div>
     </main>
