--- a/src/app/components/shell/header/header.hbs
+++ b/src/app/components/shell/header/header.hbs
@@ -8,7 +8,7 @@
         <div class="container">
             <ul class="nav-menu meta-menu" role="menu" aria-label="Meta navigation menu">
                 <li class="nav-menu-item"><a href="/contact" role="menuitem">Contact</a></li>
-                <li class="nav-menu-item"><a href="/give" role="menuitem">Give</a></li>
+                <!--<li class="nav-menu-item"><a href="/give" role="menuitem">Give</a></li>-->
                 <li class="nav-menu-item login"><a href="https://oscms-dev.openstax.org/accounts/login/openstax/?next=" role="menuitem">Login</a></li>
             </ul>
             <span class="logo-wrapper">
