Add products section
Changed products to boxes since it's used on other pages as well

--- a/src/app/pages/k-12/k-12.hbs
+++ b/src/app/pages/k-12/k-12.hbs
@@ -24,6 +24,10 @@
 
         <div class="tutor-banner"></div>
 
-        <div class="buckets"><div class="buckets-section"></div></div>
+        <div class="boxes"></div>
+
+        <div class="buckets">
+            <div class="buckets-section"></div>
+        </div>
     </main>
 </div>
