Set up Allies page
Queried allies data for all books at once, organized it to be
more or less like the real allies pull should look. Changed all
URLs to point to top-level for their sites.

Design is responsive.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -106,6 +106,7 @@ a {
 
 @import 'components/bucket';
 @import 'components/buttons';
+@import 'components/filter-buttons';
 @import 'components/forms';
 @import 'components/headers';
 @import 'components/option-list';
