--- a/src/app/pages/faculty-verification/faculty-verification.hbs
+++ b/src/app/pages/faculty-verification/faculty-verification.hbs
@@ -1,11 +1,13 @@
 <style scoped>@import url(/app/pages/faculty-verification/faculty-verification.css);</style>
 <h1>Faculty Verification</h1>
 <div class="faculty-verification">
-    <div class="book-blurb">
-        <p>
-            Please fill out the form below....
-        </p>
-    </div>
+    <p class="subhead">
+        A verified instructor account at OpenStax gives you access to all
+        instructor-only resources for our books, like test banks, answer
+        guides, and more. We manually verify all instructor account requests,
+        so you’ll hear back in three to four business days about your
+        approval. Fill out and the information below to get started!
+    </p>
     <div>
         <form accept-charset="UTF-8"
          action="https://www.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="post">
@@ -26,30 +28,25 @@
                     <input name="last_name" type="text" required />
                 </label>
                 <label>
-                    <span>School name</span>
+                    <span>School</span>
                     <input name="company" type="text" required />
                 </label>
                 <label>
-                    <span>School url</span>
+                    <span>Phone</span>
+                    <input name="phone" type="text" required />
+                </label>
+                <label>
+                    <span>College website URL</span>
                     <input name="URL" type="text" required />
                 </label>
                 <label>
-                    <span>Institutional email address</span>
+                    <span>Official institutional email address</span>
                     <input name="email" pattern="[^@]+@([^@\.]+\.)+[^@\.]+" type="text" required />
+                    <p class="note">A verification email will be sent to this address</p>
                 </label>
-                <label>
-                    <span>Phone number</span>
-                    <input name="phone" type="text" required />
-                </label>
-            </fieldset>
-            <fieldset class="labeled-inputs no-inset">
                 <label>
                     <span>Number of students this semester</span>
                     <input name="00NU00000052VId" type="number" min="1" required />
-                </label>
-                <label>
-                    <span>Your department</span>
-                    <input name="department" type="text" />
                 </label>
             </fieldset>
             <div>
