--- a/src/app/pages/faculty-verification/faculty-verification.scss
+++ b/src/app/pages/faculty-verification/faculty-verification.scss
@@ -5,15 +5,23 @@
         flex: 1 100%;
     }
 
+    .subhead {
+        color: rgba(color(neutral-darkest), 0.87);
+        font-weight: 400;
+        font-size: 1.7rem;
+        margin: 0 1rem;
+    }
+
     img {
         min-height: 20rem;
         min-width: 15rem;
     }
 
-    form {
-        border: thin solid color(neutral-light);
-        margin: 1rem;
-        padding: 1rem;
+    .note {
+        -webkit-margin-before: 0;
+        color: rgba(color(neutral-darkest), 0.56);
+        font-style: italic;
+        font-weight: 400;
     }
 
     [type="submit"] {
